[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Dice.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Board.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Scoreboard.gd" type="Script" id=3]

[node name="Board" type="Node2D"]
script = ExtResource( 2 )

[node name="Dice" type="Node2D" parent="."]

[node name="Die1" parent="Dice" instance=ExtResource( 1 )]
position = Vector2( 254.699, 82.1699 )

[node name="Die2" parent="Dice" instance=ExtResource( 1 )]
position = Vector2( 254.146, 193.717 )

[node name="Die3" parent="Dice" instance=ExtResource( 1 )]
position = Vector2( 254.146, 316.309 )

[node name="Die4" parent="Dice" instance=ExtResource( 1 )]
position = Vector2( 403.796, 143.466 )

[node name="Die5" parent="Dice" instance=ExtResource( 1 )]
position = Vector2( 406.558, 251.148 )

[node name="Scoreboard" type="ColorRect" parent="."]
margin_left = 799.0
margin_top = 2.0
margin_right = 1015.0
margin_bottom = 335.0
color = Color( 0.396078, 0.384314, 0.384314, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Scoreboard"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="VBoxContainer" parent="Scoreboard/HBoxContainer"]
margin_right = 94.0
margin_bottom = 302.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aces" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_right = 94.0
margin_bottom = 14.0
text = "Aces"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Twos" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 18.0
margin_right = 94.0
margin_bottom = 32.0
text = "Twos"

[node name="Threes" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 36.0
margin_right = 94.0
margin_bottom = 50.0
text = "Threes"

[node name="Fours" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 54.0
margin_right = 94.0
margin_bottom = 68.0
text = "Fours"

[node name="Fives" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 72.0
margin_right = 94.0
margin_bottom = 86.0
text = "Fives"

[node name="Sixes" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 90.0
margin_right = 94.0
margin_bottom = 104.0
text = "Sixes"

[node name="Bonus" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 108.0
margin_right = 94.0
margin_bottom = 122.0
text = "Bonus"

[node name="Blank" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 126.0
margin_right = 94.0
margin_bottom = 140.0

[node name="Chance" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 144.0
margin_right = 94.0
margin_bottom = 158.0
text = "Chance"

[node name="ThreeOfAKind" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 162.0
margin_right = 94.0
margin_bottom = 176.0
text = "Three of a kind"

[node name="FourOfAKind" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 180.0
margin_right = 94.0
margin_bottom = 194.0
text = "Four of a kind"

[node name="FullHouse" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 198.0
margin_right = 94.0
margin_bottom = 212.0
text = "Full House"

[node name="SmallStraight" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 216.0
margin_right = 94.0
margin_bottom = 230.0
text = "Small Straight"

[node name="LargeStraight" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 234.0
margin_right = 94.0
margin_bottom = 248.0
text = "Large Straight"

[node name="Yahzee" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 252.0
margin_right = 94.0
margin_bottom = 266.0
text = "Yahzee"

[node name="Blank2" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 270.0
margin_right = 94.0
margin_bottom = 284.0

[node name="Total" type="Label" parent="Scoreboard/HBoxContainer/Labels"]
margin_top = 288.0
margin_right = 94.0
margin_bottom = 302.0
text = "Total"

[node name="P1" type="VBoxContainer" parent="Scoreboard/HBoxContainer"]
margin_left = 98.0
margin_right = 106.0
margin_bottom = 302.0

[node name="AcesP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_right = 8.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Twosp1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 18.0
margin_right = 8.0
margin_bottom = 32.0
text = "0"

[node name="ThreesP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 36.0
margin_right = 8.0
margin_bottom = 50.0
text = "0"

[node name="FoursP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 54.0
margin_right = 8.0
margin_bottom = 68.0
text = "0"

[node name="FivesP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 72.0
margin_right = 8.0
margin_bottom = 86.0
text = "0"

[node name="SixesP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 90.0
margin_right = 8.0
margin_bottom = 104.0
text = "0"

[node name="BonusP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 108.0
margin_right = 8.0
margin_bottom = 122.0
text = "0"

[node name="Blank1P1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 126.0
margin_right = 8.0
margin_bottom = 140.0

[node name="ChanceP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 144.0
margin_right = 8.0
margin_bottom = 158.0
text = "0"

[node name="ThreeOfAKindP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 162.0
margin_right = 8.0
margin_bottom = 176.0
text = "0"

[node name="FourOfAKindP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 180.0
margin_right = 8.0
margin_bottom = 194.0
text = "0"

[node name="FullHouseP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 198.0
margin_right = 8.0
margin_bottom = 212.0
text = "0"

[node name="SmallStraightP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 216.0
margin_right = 8.0
margin_bottom = 230.0
text = "0"

[node name="LargeStraightP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 234.0
margin_right = 8.0
margin_bottom = 248.0
text = "0"

[node name="YahzeeP1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 252.0
margin_right = 8.0
margin_bottom = 266.0
text = "0"

[node name="Blank2P1" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 270.0
margin_right = 8.0
margin_bottom = 284.0

[node name="Total" type="Label" parent="Scoreboard/HBoxContainer/P1"]
margin_top = 288.0
margin_right = 8.0
margin_bottom = 302.0
text = "0"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 845.0
margin_top = 538.0
margin_right = 1024.0
margin_bottom = 600.0
text = "ROLL THE DICE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finished_rolling" from="Dice/Die1" to="." method="_on_Die1_finished_rolling"]
[connection signal="finished_rolling" from="Dice/Die2" to="." method="_on_Die2_finished_rolling"]
[connection signal="finished_rolling" from="Dice/Die3" to="." method="_on_Die3_finished_rolling"]
[connection signal="finished_rolling" from="Dice/Die4" to="." method="_on_Die4_finished_rolling"]
[connection signal="finished_rolling" from="Dice/Die5" to="." method="_on_Die5_finished_rolling"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
